--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -19,6 +19,7 @@ $color5: rgba(125, 100, 255, 1);
 	padding: 0;
 	font-family: 'IBM Plex Sans', sans-serif;
 	transition: .3s;
+	box-sizing: border-box;
 }
 
 body {
